--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -65,5 +65,4 @@ jobs:
           echo "Branch is: $branch"
           echo "Commit is: $commit"
 
-          # TODO: this needs to be fixed
-          dotnet tool run csmacnz.Coveralls --opencover -i ..\artefacts\CoverageResults.xml --useRelativePaths --repoToken $env:COVERALLS_REPO_TOKEN --commitId $commit --commitBranch $branch
+          dotnet tool run csmacnz.Coveralls --opencover -i OpinionatedUsings.Tests\coverage.opencover.xml --useRelativePaths --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:GITHUB_SHA --commitBranch $BRANCH
