--- a/src/OpinionatedUsings.Tests/OpinionatedUsings.Tests.csproj
+++ b/src/OpinionatedUsings.Tests/OpinionatedUsings.Tests.csproj
@@ -10,6 +10,11 @@
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+        <PackageReference Include="OpenCover" Version="4.7.922" />
+        <PackageReference Include="coverlet.msbuild" Version="2.9.0">
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+          <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
