--- a/src/OpinionatedUsings/OpinionatedUsings.csproj
+++ b/src/OpinionatedUsings/OpinionatedUsings.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6</TargetFramework>
         <Nullable>enable</Nullable>
         <Version>1.0.0-pre2</Version>
         <PackAsTool>true</PackAsTool>
@@ -10,7 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Glob" Version="1.1.6" />
+      <PackageReference Include="Glob" Version="1.1.9" />
       <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.7.0-1.final" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20303.1" />
     </ItemGroup>
