--- a/src/OpinionatedUsings/OpinionatedUsings.csproj
+++ b/src/OpinionatedUsings/OpinionatedUsings.csproj
@@ -3,7 +3,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6</TargetFramework>
         <Nullable>enable</Nullable>
-        <Version>1.0.0-pre2</Version>
+        <Version>1.0.0</Version>
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>opinionated-usings</ToolCommandName>
         <LangVersion>8</LangVersion>
